--- a/employeeDetails/pom.xml
+++ b/employeeDetails/pom.xml
@@ -51,7 +51,7 @@
 
 	<build>
 		<plugins>
-			<plugins>
+			<plugin>
 		<groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven.jar.plugin</artifactId>
 		<version>3.9.6</version>
