--- a/employeeDetails/pom.xml
+++ b/employeeDetails/pom.xml
@@ -54,7 +54,7 @@
 			<plugin>
 		<groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-jar-plugin</artifactId>
-		      <plugin>
+			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
